add wip typing fkotac

--- a/macrosMain.tex
+++ b/macrosMain.tex
@@ -75,8 +75,8 @@
 \newcommand{\slvalue}{s\ell}
 \newcommand{\fvalue}{\phi}
 \newcommand{\funvalue}{\mathtt{f}}
-\newcommand{\afunvalue}{\mathtt{sf}}
-\newcommand{\sfunvalue}{\mathtt{af}}
+\newcommand{\afunvalue}{\mathtt{af}}
+\newcommand{\sfunvalue}{\mathtt{sf}}
 \newcommand{\svalue}{\mathtt{s}}
 \newcommand{\snvalue}{\mathtt{r}}
 \newcommand{\truevalue}{\mathtt{True}}
@@ -159,6 +159,8 @@ body}}
 % TYPING
 
 \newcommand{\type}{\textit{T}}
+\newcommand{\atype}{\textit{AT}}
+\newcommand{\tann}{\textit{A}}
 \newcommand{\ltype}{\textit{L}}
 \newcommand{\ftype}{\textit{F}}
 \newcommand{\rtype}{\textit{R}}
@@ -167,6 +169,7 @@ body}}
 \newcommand{\ltypeset}{\textit{Lset}}
 
 \newcommand{\ftypeOf}[1]{\mathtt{field}(#1)}
+\newcommand{\atOf}[2]{\langle #1, #2 \rangle}
 
 \newcommand{\btype}{\mathtt{bool}}
 \newcommand{\ntype}{\mathtt{num}}
@@ -175,6 +178,8 @@ body}}
 \newcommand{\rtvar}{r}
 \newcommand{\ltvar}{l}
 \newcommand{\tvar}{t}
+\newcommand{\aann}{\textit{a}}
+\newcommand{\sann}{\textit{s}}
 
 \newcommand{\typescheme}{\textit{TS}}
 \newcommand{\ltypescheme}{\textit{LS}}
