--- a/macrosMain.tex
+++ b/macrosMain.tex
@@ -70,6 +70,7 @@
 \newcommand{\lvalueSet}{\mathcal{L}}
 
 \newcommand{\anyvalue}{\mathtt{v}}
+\newcommand{\sanyvalue}{\mathtt{sv}}
 \newcommand{\lvalue}{\ell}
 \newcommand{\alvalue}{a\ell}
 \newcommand{\slvalue}{s\ell}
@@ -161,6 +162,7 @@ body}}
 \newcommand{\type}{\textit{T}}
 \newcommand{\atype}{\textit{AT}}
 \newcommand{\tann}{\textit{A}}
+\newcommand{\tctx}{\textit{k}}
 \newcommand{\ltype}{\textit{L}}
 \newcommand{\ftype}{\textit{F}}
 \newcommand{\rtype}{\textit{R}}
@@ -194,6 +196,7 @@ body}}
 \newcommand{\typeof}[1]{\typeofNAME(#1)}
 
 \newcommand{\expTypJud}[4]{#1 ; #2 \vdash #3 : #4}
+\newcommand{\expTypJudC}[5]{#1 ; #2 ; #3 \vdash #4 : #5}
 \newcommand{\funTypJud}[3]{#1 \vdash #2 : #3}
 \newcommand{\proTypJud}[2]{\vdash #1 : #2}
 
